--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "scripts": {
         "fmt": "prettier --write .",
         "lint": "eslint .",
-        "build": "tsc"
+        "build": "tsc",
+        "docs": "typedoc --out docs src/index.ts"
     },
     "author": "Barthélemy Paléologue",
     "license": "MIT",
     "devDependencies": {
         "@eslint/js": "^9.21.0",
         "prettier": "^3.5.2",
+        "typedoc": "^0.27.9",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1"
     },
